# projects-monitoring-app

./: Dockerfile  README.md  manage.py  pyproject.toml
conf/: gunicorn_config.py
grants/: admin.py  forms.py  urls.py  views.py
grants/templates/grants/: add_new_grant.html  add_sponsored_money.html  all_grants.html  edit_grant.html  specific_grant.html
junior_team/: asgi.py  settings.py  urls.py  wsgi.py
main_page/: views.py
main_page/templates/main_page/: home.html  loginuser.html
members/: forms.py  urls.py  views.py
members/templates/members/: add_new_member.html  all_members.html  edit_member.html  specific_member.html
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_membermodel_grade.py  0003_membermodel_languages_alter_membermodel_grade.py
projects/templates/projects/: add_new_project.html  add_sponsored_money.html  all_projects.html  edit_project.html  edit_sponsored_money.html  specific_project.html
teams/: admin.py  forms.py  urls.py  views.py
teams/templates/teams/: add_new_team.html  all_teams.html  edit_team.html  specific_team.html
