[tool.poetry]
name = "junior-team-project"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
django-flatpickr = "^2.0.2"
poetry-plugin-dotenv = "^0.5.3"
gunicorn = "^21.2.0"
dj-config-url = "^0.1.1"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
